--- a/packages/storybook/src/stories/docs/contributing/04-developing-components.stories.mdx
+++ b/packages/storybook/src/stories/docs/contributing/04-developing-components.stories.mdx
@@ -81,14 +81,31 @@ These custom properties are declared on the component side and can then be used 
 
 For instance, to give the `<ino-button>` a custom property, the following snippet is all you need:
 ```scss
-  /**
-    * @prop --my-background-color: Some description about the variable
-   */
   ino-button button {
     background-color: var(--my-background-color, #fff); // the #fff is the fallback value
   }
 ```
-Stencil will automatically put the name of the variable and its description into the args table.
+
+In order to put the name of the variables into the args table the properties need to be passed to the template generator (only possible for playground):
+```
+  const BUTTON_CSS_PROPS: CssProperties = {
+    backgroundColor: cssColor('--my-background-color', 'Some description about the variable.', '#fff')
+  }
+
+  export const Playground = template.generatePlaygroundStory(BUTTON_CSS_PROPS);
+```
+
+The list of available css property builder:
+```
+  cssColor(name, description, defaultValue?)
+  cssSize(name, description, defaultValue?, unit?) // default unit is 'px'
+  cssNumber(name, description, defaultValue?)
+  cssTime(name, description, defaultValue?, unit?) // default unit is 'ms'
+  cssText(name, description, defaultValue?)
+```
+
+
+This way the variables can also be controlled in the playground story.
 
 Custom properties should be used if the component defines styles that are strongly opinionated or are likely to be customized by the consumer.
 However, usage should be kept to a minimum, as any changes to the styles of our components will result in deviations from the inovex style, which is ultimately the goal of our carefully designed library.
