--- a/packages/storybook/src/stories/docs/styleguide/typography.stories.mdx
+++ b/packages/storybook/src/stories/docs/styleguide/typography.stories.mdx
@@ -1,8 +1,8 @@
 import {Meta} from "@storybook/addon-docs";
 
-<Meta title={`Docs/Styleguide/Typography`}/>
+<Meta title={'Docs/Styleguide/Typography'}/>
 
-<h1 class="display">Typography</h1>
+<h1 id="typography" class="display">Typography</h1>
 
 <div class="typo-box">
   <div class="typo-description">
