--- a/packages/storybook/src/stories/docs/styleguide/colors.stories.mdx
+++ b/packages/storybook/src/stories/docs/styleguide/colors.stories.mdx
@@ -3,74 +3,85 @@ import { ColorPalette, ColorItem} from "@storybook/blocks"
 
 <Meta title="Docs/Styleguide/Colors" />
 
+# Color Palette
+
+Our color palette is designed to support a wide range of visual cues, from primary colors to neutral shades. Utilizing CSS variables, we've created a system that makes it easy to apply consistent colors across your application.
+
+### How to Use These Colors
+
+To apply our color palette, reference the CSS variable names provided. For example, to use the primary colors, you can apply `color: var(--inovex-elements-primary)` or `color: var(--inovex-elements-p-6)` to your elements.
+
+**Example:**
+
 <ColorPalette>
   <ColorItem
     title="Basics"
     subtitle="White, Black, Transparent"
-    colors={{ White: '#fff', Black: '#000', Transparent: 'rgba(255, 255, 255, 0)' }}
+    colors={{ white: '#fff', black: '#000', transparent: 'rgba(255, 255, 255, 0)' }}
   />
   <ColorItem
     title="Primary Blue"
     subtitle="Brand Color and Interaction State"
     colors={{
-      Primary: '#2c02ff',
-      PrimaryFocus: '#2d5dff4d',
+      'primary': '#2c02ff',
+      'primary-focus': '#2d5dff4d',
     }}
   />
   <ColorItem
     title="Primary Palette"
     subtitle="From Light to Dark"
     colors={{
-      P1: '#f6fafe',
-      P2: '#e2ecff',
-      P3: '#beccff',
-      P4: '#8aa1ff',
-      P5: '#4655ff',
-      P6: '#2d02ff',
-      P7: '#1801e1',
-      P8: '#0801c4',
-      P9: '#0106a6',
-      P10: '#000e88',
-      P11: '#00126a',
-      P12: '#00124d',
+     'p-1': '#f6fafe',
+      'p-2': '#e2ecff',
+      'p-3': '#beccff',
+      'p-4': '#8aa1ff',
+      'p-5': '#4655ff',
+      'p-6': '#2d02ff',
+      'p-7': '#1801e1',
+      'p-8': '#0801c4',
+      'p-9': '#0106a6',
+      'p-10': '#000e88',
+      'p-11': '#00126a',
+      'p-12': '#00124d',
     }}
   />
    <ColorItem
     title="Neutral Palette"
     subtitle="From Light to Dark"
     colors={{
-      N1: '#f4f4f7',
-      N2: '#dfdee6',
-      N3: '#cac8d5',
-      N4: '#b6b4c4',
-      N5: '#a3a0b3',
-      N6: '#908da2',
-      N7: '#7e7b91',
-      N8: '#6d6a80',
-      N9: '#5d5b69',
-      N10: '#4c4b52',
-      N11: '#39383c',
-      N12: '#191919',
+      'n-1': '#f4f4f7',
+      'n-2': '#dfdee6',
+      'n-3': '#cac8d5',
+      'n-4': '#b6b4c4',
+      'n-5': '#a3a0b3',
+      'n-6': '#908da2',
+      'n-7': '#7e7b91',
+      'n-8': '#6d6a80',
+      'n-9': '#5d5b69',
+      'n-10': '#4c4b52',
+      'n-11': '#39383c',
+      'n-12': '#191919',
     }}
   />
-   <ColorItem
+  <ColorItem
     title="Informational Colors"
     subtitle="Alerts & Notices"
-    colors={{ Informational: '#2d5dff', InformationalLight: '#d6e0ff' }}
+    colors={{ 'informational': '#2d5dff', 'informational-light': '#d6e0ff' }}
   />
   <ColorItem
     title="Success Colors"
     subtitle="Positive Feedback"
-    colors={{ Success: '#6cf070', SuccessLight: '#d7fad8' }}
+    colors={{ 'success': '#6cf070', 'success-light': '#d7fad8' }}
   />
   <ColorItem
     title="Error Colors"
     subtitle="Alerts & Errors"
-    colors={{ Error: '#ff2e54', ErrorLight: '#ffd6de' }}
+    colors={{ 'error': '#ff2e54', 'error-light': '#ffd6de' }}
   />
   <ColorItem
     title="Warning Colors"
     subtitle="Cautionary Signals"
-    colors={{ Warning: '#ffa42e', WarningLight: '#ffeed6' }}
+    colors={{ 'warning': '#ffa42e', 'warning-light': '#ffeed6' }}
   />
+
 </ColorPalette>
